TEST_PROGRAMS/INVALID/15/assignment1.go
/* LHS ':=' RHS with nonmatching lengths */

package error

func f(){
    a, b := 1
}
